--- a/src/components/tag/tag.module.css
+++ b/src/components/tag/tag.module.css
@@ -10,6 +10,7 @@
   gap: 0.5rem;
   padding: 0.375rem 0.75rem;
   border-radius: 9999px;
+  line-height: 1;
 
   border: 1px solid var(--_tag-borderColor);
   background: var(--_tag-background);
